tests/ui/unit-struct.stderr
error: input must be a struct with fields
 --> $DIR/unit-struct.rs:1:1
  |
1 | #[readonly::make]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
